Tue Apr 26 21:11:02 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_lshift): {Fixnum,Bignum}#<< is unified into
	  Integer.

	* bignum.c (rb_big_lshift): Don't define Bignum#<<.

	* internal.h (rb_big_lshift): Declared.

Tue Apr 26 20:59:40 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_rshift): {Fixnum,Bignum}#>> is unified into
	  Integer.

	* bignum.c (rb_big_rshift): Don't define Bignum#>>.

	* internal.h (rb_big_rshift): Declared.

Tue Apr 26 20:46:16 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_size): {Fixnum,Bignum}#size is unified into Integer.

	* bignum.c (rb_big_size_m): Don't define Bignum#size.

	* internal.h (rb_big_size_m): Declared.

Tue Apr 26 20:09:08 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_bit_length): {Fixnum,Bignum}#bit_length is
	  unified into Integer.

	* bignum.c (rb_big_bit_length): Don't define Bignum#bit_length.

	* internal.h (rb_big_bit_length): Declared.

Tue Apr 26 19:56:16 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_abs): Integer#{abs,magnitude} moved from
	  Fixnum and Bignum.

	* bignum.c (rb_big_abs): Don't define Bignum#{abs,magnitude}.

	* internal.h (rb_big_abs): Declared.

Mon Apr 25 14:39:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/rbconfig/sizeof/extconf.rb: just check the existence of each
	  types, to reduce configuration time, especially cross-compiling.

	* template/sizes.c.tmpl: calculate sizes of checked types at
	  compilation time.

Mon Apr 25 11:27:27 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* doc/extension.rdoc: Improvements to english grammers.
	  [Bug #12246][ruby-core:74792][ci skip]

Mon Apr 25 11:17:50 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* encoding.c: Fix return value of `Encoding::ISO8859_1.name`
	  [Bug #12313][ruby-core:75147][ci skip]
	* ext/bigdecimal/bigdecimal.c: Fix code sample of `BigDecimal.new`

Sun Apr 24 23:29:16 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in: add missing -lm for AIX.
